--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: notimanagement
+  name: pointmanagement
   labels:
-    app: notimanagement
+    app: pointmanagement
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: notimanagement
+      app: pointmanagement
   template:
     metadata:
       labels:
-        app: notimanagement
+        app: pointmanagement
     spec:
       containers:
-        - name: notimanagement
-          image: username/notimanagement:latest
+        - name: pointmanagement
+          image: username/pointmanagement:latest
           ports:
             - containerPort: 8080
           readinessProbe:
