--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: notimanagement
+  name: pointmanagement
   labels:
-    app: notimanagement
+    app: pointmanagement
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: notimanagement
+    app: pointmanagement
